fix: update scrollbar width

--- a/src/css/utils/common.css
+++ b/src/css/utils/common.css
@@ -20,7 +20,7 @@ html {
 }
 
 body::-webkit-scrollbar {
-  width: 8px;
+  width: 0px;
 }
 
 body::-webkit-scrollbar-thumb {
